ola-parser/src/testdata/syntaxTests/nameAndTypeResolution/416_interface_function_bodies.sol
interface I {
    fn f() external pure {
    }
}
// ----
// TypeError 4726: (18-52): Functions in interfaces cannot have an implementation.
